tests/script_errors/unexpected_escape/error.txt
Error: 
    1 | let test = "\z";
      |             ^^ An unexpected escape code 'z' was found